# Crypto_Sentry

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 171701a58d27_made_changes_to_user_db_model.py  1b9a0914276e_initial_schema.py  224ba2b1f8c5_merge_multiple_heads.py  744b9da5ed66_initial_working_schema_with_enums.py
src/a_c_d_backend/: cache.py  config.py  main.py  worker.py
src/a_c_d_backend/api/: alert.py  prices.py  subscription.py  telegram_webhook.py  transaction.py  wallet.py  webhook.py
src/a_c_d_backend/auth/: schemas.py
src/a_c_d_backend/auth/routes/: auth.py  user.py
src/a_c_d_backend/auth/services/: dependency.py  jwt.py  utils.py
src/a_c_d_backend/db/: main.py  models.py
src/a_c_d_backend/image_upload/routes/: upload.py
src/a_c_d_backend/image_upload/services/: utils.py
src/a_c_d_backend/services/: alert.py  coingecko.py  seed.py  telegram.py
src/a_c_d_backend/telegram_bot/: api_client.py  app.py  keyboard.py  states.py
src/a_c_d_backend/telegram_bot/handlers/: auth.py  general.py  wallets.py
src/models/: alert_rule.py  prices.py  subscriptions.py  transaction.py  wallet.py
