[project]
name = "a-c-d-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Void",email = "ugonwamadueke2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlmodel (>=0.0.34,<0.0.35)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.4,<2.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "jsonwebtoken (>=1.0.0,<2.0.0)",
    "websockets (>=16.0,<17.0)",
    "requests (>=2.33.0,<3.0.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "redis (>=7.4.0,<8.0.0)",
    "rq (>=2.7.0,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "stripe (>=15.0.0,<16.0.0)",
    "alembic-postgresql-enum (>=1.10.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "a_c_d_backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-passlib (>=1.7.7.20260211,<2.0.0.0)"
]
